--- a/blog-single.html
+++ b/blog-single.html
@@ -44,7 +44,7 @@
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-behance"></i></a></li>
                             </ul>
                         </div>                      
@@ -63,13 +63,13 @@
                           <li><a href="gallery.html">Gallery</a></li>
                           <li><a href="event.html">Events</a></li>
                           <li><a href="ticket.html">Ticket</a></li>
-                          <li><a href="blog-home.html">Blog</a></li>
+                          <!-- <li><a href="blog-home.html">Blog</a></li> -->
                           <li><a href="contact.html">Contact</a></li>
                           <li class="menu-has-children"><a href="">Pages</a>
                             <ul>
-                              <li><a href="blog-single.html">Blog Single</a></li>
+                              <!-- <li><a href="blog-single.html">Blog Single</a></li> -->
                               <li><a href="category.html">Category</a></li>
-                              <li><a href="elements.html">Elements</a></li>
+                              <!-- <li><a href="elements.html">Elements</a></li> -->
                             </ul>
                           </li>                   
                         </ul>
@@ -148,7 +148,7 @@
 											<ul>
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+												<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 												<li><a href="#"><i class="fa fa-behance"></i></a></li>
 											</ul>
 											
@@ -331,7 +331,7 @@
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+									<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 									<li><a href="#"><i class="fa fa-behance"></i></a></li>
 								</ul>								
 							</div>
@@ -495,7 +495,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                 <div class="footer-social d-flex align-items-center">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                                    <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-behance"></i></a>
                                 </div>
                             </div>
@@ -508,7 +508,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <script src="js/vendor/jquery-2.2.4.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
             <script src="js/vendor/bootstrap.min.js"></script>          
-            <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+            <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5a1EeKYds12eMN4VgNjeN4VnXahIwhbU"></script>
             <script src="js/easing.min.js"></script>            
             <script src="js/hoverIntent.js"></script>
             <script src="js/superfish.min.js"></script> 
