--- a/category.html
+++ b/category.html
@@ -44,7 +44,7 @@
 				  			<ul>
 		  						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="#"><i class="fa fa-behance"></i></a></li>
 				  			</ul>
 				  		</div>			  			
@@ -63,13 +63,13 @@
 				          <li><a href="gallery.html">Gallery</a></li>
 				          <li><a href="event.html">Events</a></li>
 				          <li><a href="ticket.html">Ticket</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>
+				          <!-- <li><a href="blog-home.html">Blog</a></li> -->
 				          <li><a href="contact.html">Contact</a></li>
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				              <li><a href="category.html">Category</a></li>
-				              <li><a href="elements.html">Elements</a></li>
+				              <!-- <li><a href="blog-single.html">Blog Single</a></li> -->
+				              <!-- <li><a href="category.html">Category</a></li>
+				              <li><a href="elements.html">Elements</a></li> -->
 				            </ul>
 				          </li>			          
 				        </ul>
@@ -110,7 +110,7 @@
 							</p>
 						</div>
 						<div class="col-lg-6 cat-top-right">
-							<img class="img-fluid" src="img/pages/ct1.jpg" alt="">
+						<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
 						</div>
 					</div>
 				</div>	
@@ -130,34 +130,35 @@
 					</div>						
 					<div class="row">
 						<div class="col-lg-8 single-recent-work">
-							<a class="recent-project" href="img/pages/w1.jpg">
-								<img class="img-fluid" src="img/pages/w1.jpg" alt="">
-							</a>	
+							<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
+							</a>
+								
 						</div>
 						<div class="col-lg-4 single-recent-work">
-							<a class="recent-project" href="img/pages/w2.jpg">
-								<img class="img-fluid" src="img/pages/w2.jpg" alt="">
-							</a>	
+							<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
+							</a>
 						</div>	
 						<div class="col-lg-4 single-recent-work">
-							<a class="recent-project" href="img/pages/w3.jpg">
-								<img class="img-fluid" src="img/pages/w3.jpg" alt="">
-							</a>	
+						<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
+							</a>
 						</div>
 						<div class="col-lg-8 single-recent-work">
-							<a class="recent-project" href="img/pages/w4.jpg">
-								<img class="img-fluid" src="img/pages/w4.jpg" alt="">
+						<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
 							</a>	
 						</div>
 						<div class="col-lg-6 single-recent-work">
-							<a class="recent-project" href="img/pages/w5.jpg">
-								<img class="img-fluid" src="img/pages/w5.jpg" alt="">
-							</a>	
+							<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
+							</a>
 						</div>
 						<div class="col-lg-6 single-recent-work">
-							<a class="recent-project" href="img/pages/w6.jpg">
-								<img class="img-fluid" src="img/pages/w6.jpg" alt="">
-							</a>	
+							<a class="recent-project" href="img/No_Image_Available.jpg">
+								<img src="img/No_Image_Available.jpg" class="img-fluid" alt="">
+							</a>
 						</div>
 
 						<a href="#" class="mt-40 primary-btn text-uppercase mx-auto d-block">Load More Projects</a>																			
@@ -166,83 +167,7 @@
 			</section>
 			<!-- End recent-worl Area -->
 			
-					
-			<!-- Start blog Area -->
-			<section class="blog-area section-gap" id="blog">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-70 col-lg-8">
-							<div class="title text-center">
-								<h1 class="mb-10">Latest From Our Blog</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-							</div>
-						</div>
-					</div>					
-					<div class="row">
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b1.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b2.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b3.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b4.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>							
-					</div>
-				</div>	
-			</section>
-			<!-- End blog Area -->
+		
 
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
@@ -252,7 +177,9 @@
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+								Artist
+Illustration
+Creativity & drawing	
 								</p>
 								<p class="footer-text">
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -285,7 +212,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
+									<a href="#"><i class="fa fa-instagram"></i></a>
 									<a href="#"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
@@ -298,7 +225,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5a1EeKYds12eMN4VgNjeN4VnXahIwhbU"></script>
   			<script src="js/easing.min.js"></script>			
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>	
