--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 				  			<ul>
 		  						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 								<li><a href="#"><i class="fa fa-behance"></i></a></li>
 				  			</ul>
 				  		</div>			  			
@@ -63,13 +63,13 @@
 				          <li><a href="gallery.html">Gallery</a></li>
 				          <li><a href="event.html">Events</a></li>
 				          <li><a href="ticket.html">Ticket</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>
+				          <!-- <li><a href="blog-home.html">Blog</a></li> -->
 				          <li><a href="contact.html">Contact</a></li>
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
-				              <li><a href="blog-single.html">Blog Single</a></li>
+				              <!-- <li><a href="blog-single.html">Blog Single</a></li> -->
 				              <li><a href="category.html">Category</a></li>
-				              <li><a href="elements.html">Elements</a></li>
+				              <!-- <li><a href="elements.html">Elements</a></li> -->
 				            </ul>
 				          </li>			          
 				        </ul>
@@ -107,101 +107,25 @@
 						</div>
 					</div>						
 					<div id="grid-container" class="row">
-						<a class="single-gallery" href="img/g1.jpg"><img class="grid-item" src="img/g1.jpg"></a>
-						<a class="single-gallery" href="img/g2.jpg"><img class="grid-item" src="img/g2.jpg"></a>
-						<a class="single-gallery" href="img/g3.jpg"><img class="grid-item" src="img/g3.jpg"></a>
-						<a class="single-gallery" href="img/g4.jpg"><img class="grid-item" src="img/g4.jpg"></a>
-						<a class="single-gallery" href="img/g5.jpg"><img class="grid-item" src="img/g5.jpg"></a>
-						<a class="single-gallery" href="img/g6.jpg"><img class="grid-item" src="img/g6.jpg"></a>
-						<a class="single-gallery" href="img/g7.jpg"><img class="grid-item" src="img/g7.jpg"></a>
-						<a class="single-gallery" href="img/g8.jpg"><img class="grid-item" src="img/g8.jpg"></a>
-						<a class="single-gallery" href="img/g9.jpg"><img class="grid-item" src="img/g9.jpg"></a>
-						<a class="single-gallery" href="img/g10.jpg"><img class="grid-item" src="img/g10.jpg"></a>
-						<a class="single-gallery" href="img/g11.jpg"><img class="grid-item" src="img/g11.jpg"></a>
-						<a class="single-gallery" href="img/g12.jpg"><img class="grid-item" src="img/g12.jpg"></a>
-						<a class="single-gallery" href="img/g4.jpg"><img class="grid-item" src="img/g4.jpg"></a>
-						<a class="single-gallery" href="img/g5.jpg"><img class="grid-item" src="img/g5.jpg"></a>						
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item fixed_img" src="img/omNahahSihvay.png"></a>
+						<a class="single-gallery" href="img/pages/ex2.png"><img class="grid-item" src="img/pages/ex2.png"></a>
+
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item" src="img/omNahahSihvay.png"></a>
+
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item" src="img/omNahahSihvay.png"></a>
+
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item" src="img/omNahahSihvay.png"></a>
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item" src="img/omNahahSihvay.png"></a>
+
+						<a class="single-gallery" href="img/omNahahSihvay.png"><img class="grid-item" src="img/omNahahSihvay.png"></a>
+			
+						
 					</div>	
 				</div>	
 			</section>
 			<!-- End gallery Area -->			
 			
-			<!-- Start blog Area -->
-			<section class="blog-area section-gap" id="blog">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-70 col-lg-8">
-							<div class="title text-center">
-								<h1 class="mb-10">Latest From Our Blog</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-							</div>
-						</div>
-					</div>					
-					<div class="row">
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b1.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b2.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b3.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>
-						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
-								<img class="img-fluid" src="img/b4.jpg" alt="">								
-							</div>
-							<p class="date">10 Jan 2018</p>
-							<a href="#"><h4>Addiction When Gambling
-							Becomes A Problem</h4></a>
-							<p>
-								inappropriate behavior ipsum dolor sit amet, consectetur.
-							</p>
-							<div class="meta-bottom d-flex justify-content-between">
-								<p><span class="lnr lnr-heart"></span> 15 Likes</p>
-								<p><span class="lnr lnr-bubble"></span> 02 Comments</p>
-							</div>									
-						</div>							
-					</div>
-				</div>	
-			</section>
-			<!-- End blog Area -->
+		
 
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
@@ -215,9 +139,9 @@
 								</p>
 								<p class="footer-text">
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> and distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">MJ</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								</p>
+								</p>	
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
@@ -244,7 +168,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
+									<a href="#"><i class="fa fa-instagram"></i></a>
 									<a href="#"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
@@ -257,7 +181,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5a1EeKYds12eMN4VgNjeN4VnXahIwhbU"></script>
   			<script src="js/easing.min.js"></script>			
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>	
