--- a/event.html
+++ b/event.html
@@ -112,7 +112,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
+								This art quote by Georgia O’Keeffe tells us she too found art capable of expressing what she wanted to say better than words themselves.	
 								</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 							</div>
@@ -121,8 +121,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
+									This art quote by Georgia O’Keeffe tells us she too found art capable of expressing what she wanted to say better than words themselves.	</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 							</div>							
 						</div>
@@ -131,7 +130,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
+								This art quote by Georgia O’Keeffe tells us she too found art capable of expressing what she wanted to say better than words themselves.
 								</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 								<img class="img-fluid" src="img/No_Image_Available.jpg" alt="">
@@ -141,7 +140,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
+								This art quote by Georgia O’Keeffe tells us she too found art capable of expressing what she wanted to say better than words themselves.
 								</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 								<img class="img-fluid" src="img/No_Image_Available.jpg" alt="">
