--- a/index.html
+++ b/index.html
@@ -376,8 +376,10 @@
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10 text-white">Our Exhibition Gallery</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
-							</div>
+								<p>Another great artist, Pablo Picasso, likened his paintings to maintaining a diary. The way he describes substituting a paintbrush for a pen demonstrates how similar the branches of the arts can be. It’s not so much about being a painter or a writer; they are two beasts of the same species. We could also guess that creativity of all types essentially draws from the same well of genius.
+								</p>		
+								</div>
+
 						</div>
 					</div>						
 					<div id="grid-container" class="row">
