--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						</div>
 						<div class="col-lg-6 quote-right">
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							A "pencil sketch" can refer to a physical drawing made with a graphite pencil or a digital application that creates sketches from photos. Physical sketches are a traditional art form used for preliminary ideas or finished works, while apps offer a quick and easy way to create digital "pencil sketches" in various styles.
 							</p>
 						</div>
 					</div>
