--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
 							<div class="single-events">
 								<img class="img-fluid" src="img/No_Image_Available.jpg" alt="">
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
-								<h6><span>21st February</span> at Central government museum</h6>
+								<h6><span>21st February</span> at Central government Delhi museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
+							The Indian Museum in Kolkata is the oldest and largest museum in India, established in 1814. It is a multipurpose institution with galleries covering art, archaeology, anthropology, zoology, geology, and botany. Founded by the Danish botanist Nathanial Wallich and housed at the Asiatic Society of Bengal, it is also the first in the Asia-Pacific region and a key institution for the museum movement in India.  
 								</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 							</div>
@@ -337,8 +337,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
+								The Indian Museum in Kolkata is the oldest and largest museum in India, established in 1814. It is a multipurpose institution with galleries covering art, archaeology, anthropology, zoology, geology, and botany. Founded by the Danish botanist Nathanial Wallich and housed at the Asiatic Society of Bengal, it is also the first in the Asia-Pacific region and a key institution for the museum movement in India.  	</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 							</div>							
 						</div>
@@ -347,8 +346,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
+								The Indian Museum in Kolkata is the oldest and largest museum in India, established in 1814. It is a multipurpose institution with galleries covering art, archaeology, anthropology, zoology, geology, and botany. Founded by the Danish botanist Nathanial Wallich and housed at the Asiatic Society of Bengal, it is also the first in the Asia-Pacific region and a key institution for the museum movement in India.  </p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 							<img class="img-fluid" src="img/No_Image_Available.jpg" alt="">
 							</div>
@@ -357,7 +355,7 @@
 								<a href="#"><h4>Event on the rock solid carbon</h4></a>
 								<h6><span>21st February</span> at Central government museum</h6>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
+								The Indian Museum in Kolkata is the oldest and largest museum in India, established in 1814. It is a multipurpose institution with galleries covering art, archaeology, anthropology, zoology, geology, and botany. Founded by the Danish botanist Nathanial Wallich and housed at the Asiatic Society of Bengal, it is also the first in the Asia-Pacific region and a key institution for the museum movement in India.  
 								</p>
 								<a href="#" class="primary-btn text-uppercase">View Details</a>
 								<img class="img-fluid" src="img/No_Image_Available.jpg" alt="">
