--- a/ticket.html
+++ b/ticket.html
@@ -117,7 +117,7 @@
 								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
+								<p class="price">$##.00</p>
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -126,11 +126,11 @@
 							</div>
 							<p class="date">10 Jan 2018</p>
 							<a href="#"><h4>Pencil Sketch</h4></a>
-							<p>
-								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
+								<p>
+								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
+								<p class="price">$##.00</p>
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -140,11 +140,10 @@
 							<p class="date">10 Jan 2018</p>
 							<a href="#"><h4>Pencil Sketch</h4></a>
 							<p>
-								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
+								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
-							</div>									
+									<p class="price">$##.00</p>			
 						</div>	
 						<div class="col-lg-4 col-md-6 single-exhibition">
 							<div class="thumb">
@@ -152,11 +151,11 @@
 							</div>
 							<p class="date">10 Jan 2018</p>
 							<a href="#"><h4>Pencil Sketch</h4></a>
-							<p>
-								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
+								<p>
+								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
+								<p class="price">#</p>
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -165,11 +164,11 @@
 							</div>
 							<p class="date">10 Jan 2018</p>
 							<a href="#"><h4>Pencil Sketch</h4></a>
-							<p>
-								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
+								<p>
+								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
+								<p class="price">#</p>
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -178,11 +177,11 @@
 							</div>
 							<p class="date">10 Jan 2018</p>
 							<a href="#"><h4>Pencil Sketch</h4></a>
-							<p>
-								Lorem ipsum dolor sit amet, consec teturadip isicing elit, sed do eiusmod tempor.
+								<p>
+								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">$45.00</p>
+								<p class="price">#</p>
 							</div>									
 						</div>																	
 					</div>
