--- a/ticket.html
+++ b/ticket.html
@@ -155,7 +155,7 @@
 								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">#</p>
+							<p class="price">$##.00</p>	
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -168,7 +168,7 @@
 								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">#</p>
+							<p class="price">$##.00</p>	
 							</div>									
 						</div>
 						<div class="col-lg-4 col-md-6 single-exhibition">
@@ -181,7 +181,7 @@
 								By MJ
 							</p>
 							<div class="meta-bottom d-flex justify-content-start">
-								<p class="price">#</p>
+								<p class="price">$##.00</p>	
 							</div>									
 						</div>																	
 					</div>
