--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
 				<div class="overlay overlay-bg"></div>	
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-center">
-						<!-- <div class="banner-content col-lg-8">
-							<h6 class="text-white">Openning on 21st February, 2018</h6>
+						<div class="banner-content col-lg-8">
+							<!-- <h6 class="text-white">Openning on 21st February, 2018</h6> -->
 							<h1 class="text-white">
-								Exhibition on Modern Era				
+								Hi I am MJ			
 							</h1>
 							<p class="pt-20 pb-20 text-white">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.  sed do eiusmod tempor incididunt..
+							A pencil sketch is a powerful expression of creativity where light and shadow come together to form a compelling visual narrative. As an artist, MJ uses delicate pencil strokes to capture not just the physical form of a subject but the essence of its mood and presence. The pencil, whether soft or hard, offers an incredible range of textures and tones, allowing for intricate detail and subtle gradations.
 							</p>
 							<a href="#" class="primary-btn text-uppercase">Get Started</a>
-						</div>											 -->
+						</div>											
 					</div>
 				</div>					
 			</section>
