--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<p class="pt-20 pb-20 text-white">
 							A pencil sketch is a powerful expression of creativity where light and shadow come together to form a compelling visual narrative. As an artist, MJ uses delicate pencil strokes to capture not just the physical form of a subject but the essence of its mood and presence. The pencil, whether soft or hard, offers an incredible range of textures and tones, allowing for intricate detail and subtle gradations.
 							</p>
-							<a href="#" class="primary-btn text-uppercase">Get Started</a>
+							<!-- <a href="#" class="primary-btn text-uppercase">Get Started</a> -->
 						</div>											
 					</div>
 				</div>					
