--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
 					<div class="row fullscreen d-flex align-items-center justify-content-center">
 						<div class="banner-content col-lg-8">
 							<!-- <h6 class="text-white">Openning on 21st February, 2018</h6> -->
-							<h1 class="text-white">
-								Hi I am MJ			
-							</h1>
+							<h2 class="text-white">
+								Hi ,	
+							</h2>
+							<h2 class="text-white">I am MJ	</h2>
 							<p class="pt-20 pb-20 text-white">
 							A pencil sketch is a powerful expression of creativity where light and shadow come together to form a compelling visual narrative. As an artist, MJ uses delicate pencil strokes to capture not just the physical form of a subject but the essence of its mood and presence. The pencil, whether soft or hard, offers an incredible range of textures and tones, allowing for intricate detail and subtle gradations.
 							</p>
